--- a/FeedMe/_config.json
+++ b/FeedMe/_config.json
@@ -1,7 +1,7 @@
 {
   "options": {
     "crawlInterval": "5",
-    "redditFeed": "https://www.reddit.com/r/yoursubreddit/new/.rss",
+    "redditFeed": "https://old.reddit.com/r/yoursubreddit/new/.rss",
     "discordWebhook": "WebhookUrl"
   }
 }
